2012-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r115400.
        http://trac.webkit.org/changeset/115400
        https://bugs.webkit.org/show_bug.cgi?id=84420

        Broke unit tests.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::applyAutofillSuggestions):

2012-04-27  Gavin Peters  <gavinp@chromium.org>

        [Chromium] Remove Webkit/chromium/public/WebReferrerPolicy.h thunk.
        https://bugs.webkit.org/show_bug.cgi?id=84552

        After http://codereview.chromium.org/10139023/ lands, this thunk is no
        longer needed.

        Reviewed by Adam Barth.

        * WebKit.gyp:
        * public/WebReferrerPolicy.h: Removed.

2012-04-27  Marcus Bulach  <bulach@chromium.org>

        [chromium] Disables a few more webkit_unittests.
        https://bugs.webkit.org/show_bug.cgi?id=85052

        Unreviewed build fix.
        
        Failing on Windows bots, probably due to r115400.

        * tests/PopupMenuTest.cpp:
        (WebKit::TEST_F):

2012-04-27  Marcus Bulach  <bulach@chromium.org>

        [chromium] Disables a few webkit_unittests.
        https://bugs.webkit.org/show_bug.cgi?id=85052

        Unreviewed build fix.

        * tests/PopupMenuTest.cpp:
        (WebKit::TEST_F):

2012-04-24  James Robinson  <jamesr@chromium.org>

        [chromium] Move ProgramBinding definitions to LayerRendererChromium and normalize naming
        https://bugs.webkit.org/show_bug.cgi?id=84808

        Reviewed by Adrienne Walker.

        Add some includes needed by this test that were previously picked up by upstream headers.

        * tests/CCLayerTreeHostImplTest.cpp:

2012-04-26  Ilya Sherman  <isherman@chromium.org>

        [Chromium] Security: Autofill info can be captured by innocuous social engineering
        Prevent users from interacting with invisible popups rendered outside the main frame's contents view.